--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -66,3 +66,43 @@
 .container section.places article div.user {
     margin: 4px;
 }
+
+.container section.places article div.amenities {
+    margin-top: 40px;
+    width: 100%;
+    align-self: center;
+    h2 {
+        font-size: 16px;
+        border-bottom: 1px solid #DDDDDD;
+        width: 90%;
+        text-align: left;
+    }
+    ul li {
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        list-style: none;
+    }
+}
+
+.container section.places article div.reviews {
+    margin-top: 40px;
+    width: 100%;
+    h2 {
+        font-size: 16px;
+        border-bottom: 1px solid #DDDDDD;
+        width: 90%;
+        text-align: left;
+    }
+    ul li {
+        list-style: none;
+        h3 {
+            font-size: 14px;
+            margin-bottom: 5px;
+        }
+        p {
+            margin: 0px;
+            font-size: 12px;
+        }
+    }
+}
